--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,8 +19,44 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* scrollbar*/
+*::-webkit-scrollbar {
+  width: 4px;
+}
+
+*::-webkit-scrollbar-track {
+  background: inherit;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 15px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #333;
+}
+
+.scrollable::-webkit-scrollbar {
+  height: 3px;
+  width: 3px;
+}
+
+.unselectable,
+img,
+Image {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
